gcc/testsuite/gm2/pim/fail/testcharint.mod
MODULE testcharint ;  (*!m2iso+gm2*)

VAR
   ch: CHAR ;
   i : INTEGER ;
BEGIN
   ch := i
END testcharint.
